force-app/main/default/objects/Application__c/fields/Days_in_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Current_Stage__c</fullName>
    <formula>IF(ISBLANK(Last_Stage_Change_Date__c), TODAY() - Applied_Date__c, TODAY() - Last_Stage_Change_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Current Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>