force-app/main/default/objects/Application__c/fields/Rejection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Notes__c</fullName>
    <label>Rejection Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>