force-app/main/default/objects/Application__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>Screening</fullName><default>false</default><label>Screening</label></value>
            <value><fullName>Interview</fullName><default>false</default><label>Interview</label></value>
            <value><fullName>Evaluation</fullName><default>false</default><label>Evaluation</label></value>
            <value><fullName>Offer</fullName><default>false</default><label>Offer</label></value>
            <value><fullName>Hired</fullName><default>false</default><label>Hired</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Withdrawn</fullName><default>false</default><label>Withdrawn</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>